resolve test errors